Add two new items.

--- a/GSoC2014.md
+++ b/GSoC2014.md
@@ -6,7 +6,7 @@ Ideas are listed in no particular order.
 
 ### Idea #1:  Disco worker in more efficient programming languages.
 
-Brief explanation:  The default disco worker is written in Python.  Python is very simple and there are a lot of tools availabe for it.  However, there are certain jobs and usecases that need more efficient languages.  The objective of this project is to implement golang or haskell workers.  The workers should be general purpose, extensible and it should be simple and flexible to extend these workers to create new workers to do various tasks.
+Brief explanation:  The default disco worker is written in Python.  Python is very simple and there are a lot of tools availabe for it.  However, there are certain jobs and usecases that need more efficient languages.  That is why the worker protocol has been abstracted out and some worker protocols in other languages (OCaml and Java) have been created.  The objective of this project is to implement a golang or haskell worker.  The workers should be general purpose, extensible and it should be simple and flexible to extend these workers to create new workers to do various tasks.
 
 Expected results: A worker in haskell or golang that can be extended to write different types of workers.
 
@@ -77,3 +77,19 @@ Expected results:  A working version of Disco which uses filesystems like HDFS f
 Knowledge prerequisites:  Distributed Systems, Erlang, File Systems.
 
 Mentors:  Shayan Pooya, Prashanth Mundkur
+
+
+
+### Idea #7: Improve the Disco UI.
+There are a couple of features that should be added to Disco UI.
+
+1. Role based authentication for Disco:
+Disco needs a mechanism to separate its users and limit the interference between them.  For example, a user should be able to kill her own job but not other people's jobs; Only the administrators should be able to kill all of the jobs.
+
+2. We should limit the amount of resources each webpage use and de-prioritize them versus the the internal calls of Disco.
+
+3. Each user should only see the jobs launched by herself.  Only an admin should be able to see the GC statistics and change the configurations of Disco.
+
+Knowledge prerequisites:  Http, html/javascript/css
+
+Mentors: Shayan Pooya, Prashanth Mundkur
